<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:gravity="center_horizontal"
        android:layout_margin="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance" />

            <EditText
                android:id="@+id/goal_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd" />

            <RadioButton
                android:id="@+id/mile_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/miles" />

            <RadioButton
                android:id="@+id/km_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/km" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_time" />
            <EditText
                android:id="@+id/goal_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hh" />
            <EditText
                android:id="@+id/goal_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"  />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mm" />
            <EditText
                android:id="@+id/goal_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"  />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ss" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10sp">
            <Button
                android:id="@+id/calc_button"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/calc_pace_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10sp"
            android:background="@color/colorAccent"
            android:visibility="invisible"
            tools:visibility="visible">
            <TextView
                android:id="@+id/target_pace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/target_pace_calc_per_calc"
                android:layout_margin="15sp"></TextView>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>